syntax = "proto3";

package client;

import "options.proto";

// Messages

message TransactionSizeFeeSymbols
{
    repeated TransactionSizeFeeSymbol transaction_size_fee_symbol_list = 1;
}

message TransactionSizeFeeSymbol
{
    string token_symbol = 1;
    sint32 base_token_weight = 2;
    sint32 added_token_weight = 3;
}

message TransactionFeeCharged {
    option (client.is_event) = true;
    string symbol = 1;
    sint64 amount = 2;
}

message ResourceTokenCharged {
    option (client.is_event) = true;
    string symbol = 1;
    sint64 amount = 2;
}

message ResourceTokenOwned {
    option (client.is_event) = true;
    string symbol = 1;
    sint64 amount = 2;
}